--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: ESTIMA is the app you need when working remotely in an agile team. 
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">ESTIMA is the app you need when working remotely in an agile team.</h1>
+		<h1 class="editable">ESTIMA - Planning Poker app for agile teams working remotely</h1>
 		<div class="download-badge-wrapper">
 			<a href="https://play.google.com/store/apps/details?id=de.brickmakers.estima">
 				<img src="{{ site.baseurl }}/images/google-download-badge.png" alt="Download for Android" class="download-badge" />
@@ -18,7 +18,12 @@ description: ESTIMA is the app you need when working remotely in an agile team. 
 		</div>
 	</div>
 </section>
-
+<div class="testimonial">
+	<div class="container">
+		<p>ESTIMA is the app you need when working remotely in an agile team:</p>
+		<p>It’s an online version of planning poker, also known as Scrum poker, perfect for remote agile teams. Planning poker is a proven and playful method for effort estimation in an agile team. ESTIMA simplifies your sprint planning, no matter where in the world your team is working from. Estimate user stories as well as view the current reference stories in a remote team.</p>
+	</div>
+</div>
 <div class="content">
 
 	<section>
